# gstreamermm

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.pre-0-10-11  INSTALL  MAINTAINERS  Makefile  Makefile.am  NEWS  README  autogen.sh  configure.ac  gstreamermm.doap
-plugins-good/trunk/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
docs/: Makefile.am
docs/reference/: Doxyfile.in  Makefile.am  reference-index.txt
examples/: .gitignore  Makefile.am  Makefile.am_fragment  README
examples/all_media_player/: main.cc
examples/audio_video_muxer/: main.cc
examples/basics/: bin.cc  bus.cc  dynamic_pads.cc  element_factory.cc  init_gstreamermm.cc
examples/dynamic_changing_element/: main.cc
examples/dynamic_changing_source/: main.cc
examples/element_link/: Makefile.am  element_link.cc
examples/hello_world/: main.cc
examples/init/: Makefile.am  init.cc
examples/media_player_gtkmm/: Makefile.am  PlayerWindow.cc  PlayerWindow.h  main.cc  player_window.cc  player_window.h
examples/ogg_player/: Makefile.am  example  main.cc
examples/ogg_player_gtkmm/: Makefile.am  PlayerWindow.cc  PlayerWindow.h  main.cc  player_window.cc  player_window.h
examples/ogg_rewriter/: main.cc
examples/opengl_filter/: main.cc  sample_gl_filter.h
examples/optiongroup/: Makefile.am  main.cc  optiongroup.cc
examples/tee_request_pad/: main.cc
examples/typefind/: main.cc
gst/: Makefile.am  README  gstmm-1.0.pc.in  gstmm.h  gstmmconfig.h.in
gst-plugins-bad/gstreamermm-plugins-bad/: Makefile.am  filelist.am  wrap_init.h
gst/gstmm/: Makefile.am  gst_wrap_init.cc  init.cc  init.h  miniobject.cc  object.h  wrap.cc  wrap.h  wrap_init.cc  wrap_init.h
gst/src/: Makefile_list_of_hg.am_fragment  bin.ccg  bin.hg  bus.ccg  bus.hg  caps.ccg  caps.hg  clock.ccg  clock.hg  element.ccg  element.hg  enums.ccg  enums.hg  error.ccg  error.hg  event.ccg  event.hg  format.ccg  format.hg  gst.defs  gst_enums.defs  gst_methods.defs  gsterror.defs  iterator.ccg  iterator.hg  message.ccg  message.hg  pad.ccg  pad.hg  padtemplate.ccg  padtemplate.hg  pipeline.ccg  pipeline.hg  query.ccg  query.hg  structure.ccg  structure.hg  systemclock.ccg  systemclock.hg  xml.ccg  (+1 more)
gstreamer/: .gitignore  Makefile.am  README  gstreamermm-0.10.pc.in  gstreamermm-1.0.pc.in  gstreamermm-uninstalled.pc.in  gstreamermm.h  gstreamermm.pc.in  gstreamermmconfig.h.in
gstreamer/gstmm/: object.cc  version.cc
gstreamer/gstreamermm/: Makefile.am  atomicqueue.h  check.cc  check.h  filelist.am  gst_wrap_init.h  handle_error.cc  handle_error.h  init.cc  init.h  miniobject.cc  miniobject.h  object.cc  object.h  register.h  structurevalue.cc  structurevalue.h  taglist.cc  taglist.h  taglist.h.patch  value_base_type_traits.h  version.cc  version.h  wrap.cc  wrap.h  wrap_init.h
gstreamer/src/: Makefile.am  Makefile_list_of_hg.am_fragment  allocator.ccg  allocator.hg  appsink.ccg  appsink.hg  audiobasesink.ccg  audiobasesink.hg  audiobasesrc.ccg  audiobasesrc.hg  audiocdsrc.ccg  audiocdsrc.hg  audioclock.ccg  audioclock.hg  audiofilter.ccg  audiofilter.hg  audioformat.ccg  audioformat.hg  audioinfo.ccg  audioinfo.hg  audioringbuffer.ccg  audioringbuffer.hg  audiosink.ccg  audiosink.hg  audiosrc.ccg  audiosrc.hg  baseaudiosink.ccg  baseaudiosink.hg  baseaudiosrc.ccg  baseaudiosrc.hg  basesink.ccg  basesink.hg  basesrc.ccg  basesrc.hg  basetransform.ccg  basetransform.hg  bin.ccg  bin.hg  buffer.ccg  buffer.hg  (+176 more)
gstreamerbase/: Makefile.am  README  gstreamerbasemm-0.10.pc  gstreamerbasemm-0.10.pc.in  gstreamerbasemm.h  gstreamerbasemmconfig.h  gstreamerbasemmconfig.h.in
gstreamerbase/gstreamerbasemm/: Makefile.am  gst_wrap_init.h  init.cc  init.h  wrap_init.h
gstreamerbase/src/: Makefile.am  Makefile_list_of_hg.am_fragment  audioclock.ccg  audioclock.hg  audiofilter.ccg  audiofilter.hg  audiosink.ccg  audiosink.hg  audiosrc.ccg  audiosrc.hg  baseaudiosink.ccg  baseaudiosink.hg  baseaudiosrc.hg  cddabasesrc.hg  colorbalance.ccg  colorbalance.hg  colorbalancechannel.ccg  colorbalancechannel.hg  generate-docs.sh  generate-enums.sh  generate-extra-defs.sh  generate-methods.sh  gstbase.defs  gstbase_docs.xml  gstbase_enums.defs  gstbase_enums.defs.patch  gstbase_methods.defs  gstbase_signals.defs  gstbase_signals.defs.patch  videosink.hg  xoverlay.hg
tests/: Makefile  Makefile.am  buffer.cc  main.cc  mmtest.h  run-all.sh  test-allocator.cc  test-atomicqueue.cc  test-base-src.cc  test-bin.cc  test-buffer-list-iterator.cc  test-buffer-mapinfo.cc  test-buffer.cc  test-bufferlist.cc  test-bus.cc  test-caps-structures.cc  test-caps.cc  test-capsfeatures.cc  test-create-bin.cc  test-create-bus.cc  test-create-element.cc  test-element.cc  test-event-wrap.cc  test-ghost-pad.cc  test-ghostpad.cc  test-init-check-noargs.cc  test-init-check.cc  test-init-noargs.cc  test-init.cc  test-interface.cc  test-iterator.cc  test-link-elements.cc  test-memory.cc  test-message-wrap.cc  test-message.cc  test-miniobject-wrap.cc  test-miniobject.cc  test-pad.cc  test-pipeline-add-element.cc  test-pipeline.cc  (+14 more)
tests/integration/: pluginbin.h  test-integration-bininpipeline.cc  test-integration-binplugin.cc  test-integration-rewritefile.cc  test-integration-seekonstartup.cc  test-integration-videoduration.cc  utils.cc  utils.h
tests/plugins/: derivedfromappsink.h  derivedfromappsrc.h  derivedfrombasetransform.h  foo.h  test-foo.h  test-plugin-appsink.cc  test-plugin-appsrc.cc  test-plugin-derivedfromappsink.cc  test-plugin-derivedfromappsrc.cc  test-plugin-derivedfrombasetransform.cc  test-plugin-pushsrc.cc  test-plugin-register.cc
tests/regression/: pluginbin.h  test-regression-bininpipeline.cc  test-regression-binplugin.cc  test-regression-rewritefile.cc  test-regression-seekonstartup.cc  test-regression-videoduration.cc  utils.cc  utils.h
tools/: Makefile.am  Makefile_list_of_sources.am_fragment  generate_gst_wrap_init.pl  generate_gst_wrap_init.pl.in  generate_wrap_init.pl.in
tools/extra_defs_gen/: Makefile.am  generate_defs_gst.cc  generate_defs_gstbase.cc  generate_plugin_gmmproc_file.cc  generate_plugin_hg_file.cc  (+5 more)
(+119 files in other folders)
