SUBDIRS = src gstmm

EXTRA_DIST = README gstmmconfig.h.in \
gstmm-1.0.pc.in gstmm.h

gstmm_includedir      = $(includedir)/gstmm-1.0
gstmm_include_DATA  	= gstmm.h

gstmm_configdir       = $(libdir)/gstmm-1.0/include
gstmm_config_DATA     = gstmmconfig.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = gstmm-1.0.pc

