SUBDIRS = src gstmm

EXTRA_DIST = README gstmmconfig.h.in gstreamermm-1.0.pc.in gstreamermm.h

gstreamermm_includedir = $(includedir)/gstreamermm-1.0
gstreamermm_include_DATA = gstreamermm.h

gstreamermm_configdir       = $(libdir)/gstreamermm-1.0/include
gstreamermm_config_DATA     = gstmmconfig.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = gstreamermm-1.0.pc

