SUBDIRS = src gstreamermm

EXTRA_DIST = README gstmmconfig.h.in gstreamermm-0.10.pc.in gstreamermm.h

gstreamermm_includedir = $(includedir)/gstreamermm-0.10
gstreamermm_include_DATA = gstreamermm.h

gstreamermm_configdir       = $(libdir)/gstreamermm-0.10/include
gstreamermm_config_DATA     = gstmmconfig.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = gstreamermm-0.10.pc

