SUBDIRS = src gstreamerbasemm

EXTRA_DIST = README gstreamerbasemmconfig.h.in gstreamerbasemm-0.10.pc.in gstreamerbasemm.h

gstreamerbasemm_includedir = $(includedir)/gstreamerbasemm-0.10
gstreamerbasemm_include_DATA = gstreamerbasemm.h

gstreamerbasemm_configdir       = $(libdir)/gstreamerbasemm-0.10/include
gstreamerbasemm_config_DATA     = gstreamerbasemmconfig.h

pkgconfigdir          = $(libdir)/pkgconfig
pkgconfig_DATA        = gstreamerbasemm-0.10.pc

